[package]
name = "Fwllow"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-client = "1.17"
solana-sdk = "1.17"
bs58 = "0.4"
spl-token = "4.0"
spl-associated-token-account = "2.3"
base64 = "0.21"